Criacao das views de aluno e conhecimento para o admin

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -17,13 +17,13 @@
         <li><a href="/admin/cadastrarAluno">Cadastrar aluno</a></li>
         <li><a href="/admin/listarAlunos">Listar alunos</a></li>
         <li><a href="/admin/editarAluno">Editar aluno</a></li>
-        <li><a href="/admin/excluir">Excluir aluno</a></li>
+        <li><a href="/admin/excluirAluno">Excluir aluno</a></li>
 
         <h2><strong>Palavra-chave</strong></h2>
         <li><a href="/admin/cadastrarPalavraschave">Cadastrar palavra-chave</a></li>
         <li><a href="/admin/listarPalavrasChave">Listar palavras-chave</a></li>
-        <li><a href="/admin/editarPalavrasChave">Editar palavra-chave</a></li>
-        <li><a href="/admin/excluirPalavrasChave">Excluir palavra-chave</a></li>
+        <li><a href="/admin/editarPalavraChave">Editar palavra-chave</a></li>
+        <li><a href="/admin/excluirPalavraChave">Excluir palavra-chave</a></li>
 
         <h2><strong>Conhecimento</strong></h2>
         <li><a href="/admin/cadastrarConhecimentos">Cadastrar conhecimento</a></li>
