criacao das views de projeto do aluno

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -36,9 +36,9 @@
       <ul>
         <h2><strong>Projetos</strong></h2>
         <li><a href="/aluno/cadastrarProjetos">Cadastrar projeto</a></li>
-        <li><a href="/aluno/projetos">Editar projeto</a></li>
-        <li><a href="/aluno/projetos">Excluir projeto</a></li>
-        <li><a href="/aluno/projetos">Adicionar desenvolvedor projeto</a></li>
+        <li><a href="/aluno/editarProjetos">Editar projeto</a></li>
+        <li><a href="/aluno/excluirProjetos">Excluir projeto</a></li>
+        <li><a href="/aluno/addDevprojetos">Adicionar desenvolvedor projeto</a></li>
 
 
         <h2><strong>Conhecimento</strong></h2>
